<resources>
    <string name="application_name">MeetUrFriends</string>
    <string name="hyper_link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed tempor incididunt...<a> more </a> </string>
    <string name="agora_app_id">56cea7f170254a959e39e125dc8d2ba6</string>
    <string name="app_unit_id">ca-app-pub-8787848622927672/2842871670</string>
    <string name="new_agora_app_id" translatable="false">644350989e7b42b3b8f9b8433ce55308</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Message</string>
    <string name="title_more">More</string>
    <string name="failure_time_out_error">Request time out!</string>
    <string name="failure_something_went_wrong">Something went wrong please try again later!</string>
    <string name="failure_server_not_responding">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="failure_internet_connection">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="places_api_key" translatable="false">AIzaSyAs0rmZ2UJbx5-lo94SG-m93INIE7tdTpQ</string>
    <string name="no_comments_yet_nbe_the_first_to_comment">“No comments in your comments box, yet! \n start comments with people around you.”</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="online">Online</string>
    <string name="last_seen">Last Seen</string>
    <string name="not_modified_error">Not Modified Error</string>
    <string name="bad_request_error">Bad Request Error</string>
    <string name="unauthorized_error">UnAuthorized Error</string>
    <string name="forbidden_error">Forbidden Error</string>
    <string name="not_found_error">Url Not Found Error</string>
    <string name="method_not_allowed_error">Method Not Allowed Error</string>
    <string name="conflict_error">Conflict error</string>
    <string name="unprocessable_error">UnProcessableError</string>
    <string name="ad_attribution">Ad</string>
    <string name="label_chat_room">Chat Room</string>
    <string name="label_join">Join</string>
    <string name="label_public">Public</string>
    <string name="label_choose_your_profile_pic">Choose your profile\npic &amp; username</string>
    <string name="hint_enter_your_username">Enter your username</string>
    <string name="label_submit">Submit</string>
    <string name="label_profile">Profile</string>
    <string name="label_chat_rooms">Chat Rooms</string>
    <string name="hint_type_a_message">Type a message...</string>
    <string name="label_create_room">Create Room</string>
    <string name="label_room_name">Room Name</string>
    <string name="label_room_description">Room Description</string>
    <string name="label_add_payment">Add Payment</string>
    <string name="label_view_profile">View Profile</string>
    <string name="label_kick_out">Kick Out</string>
    <string name="label_kick_out_message">Kickout</string>
    <string name="label_slap_user">Slap User</string>
    <string name="label_slap">slap</string>
    <string name="label_mic_access">Mic Access</string>
    <string name="label_ban_user">Ban User</string>
    <string name="label_ban">Ban</string>
    <string name="label_report_user">Report User</string>
    <string name="label_request_gift">Request Gift</string>
    <string name="label_send_gift">Send Gift</string>
    <string name="label_delete_post">Delete Post</string>
    <string name="label_report">Report</string>
    <string name="label_share_post">Share Post</string>
    <string name="label_chat_room_info">Chat Room Info</string>
    <string name="label_your_have_kick_out_timer">Your have kick out timer</string>
    <string name="label_5_minutes">5 Minutes</string>
    <string name="label_10_minutes">10 Minutes</string>
    <string name="label_20_minutes">20 Minutes</string>
    <string name="label_30_minutes">30 Minutes</string>
    <string name="label_continue">Continue</string>
    <string name="label_enter_time_in_minutes">Enter time in minutes</string>
    <string name="label_you_received_new_join_chat_room_request">You received new join chat room request</string>
    <string name="label_reject">Reject</string>
    <string name="label_accept">Accept</string>
    <string name="label_join_chat_room_request">Join Chat Room Request</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="error_in_finding_file_path">Error in finding file path</string>
    <string name="error_please_enter_user_name">Please enter user name</string>
    <string name="error_please_select_user_profile">Please select user profile</string>
    <string name="error_please_enter_room_name">Please enter room name</string>
    <string name="error_please_enter_room_description">Please enter room description</string>
    <string name="label_private">Private</string>
    <string name="error_please_select_room_image">Please select room image</string>
    <string name="error_please_enter_message">Please enter message</string>
    <string name="label_notification">Notifications</string>
    <string name="label_coming_soon">Coming soon</string>
    <string name="desc_want_to_join_chat_room">Hello! Admin I want to join</string>
    <string name="label_requested">Requested</string>
    <string name="label_flexible_plans">Flexible Plans</string>
    <string name="label_user_kick_out">User Kick Out</string>
    <string name="label_user_slap">User Slap</string>
    <string name="label_user_mic_access">User Mic Access</string>
    <string name="label_user_ban">User Ban</string>
    <string name="label_pay">Pay</string>
    <string name="subscribe_create_room_of_your_choice">Subscribe \nCreate room of \nyour choice</string>
    <string name="label_subscription">Subscription</string>
    <string name="label_500_coin">500 coin</string>
    <string name="price_7_99">$7.99</string>
    <string name="price_23_99">$23.99</string>
    <string name="price_47_99">$47.99</string>
    <string name="price_95_99">$95.99</string>
    <string name="label_primary_room">Primary Room</string>
    <string name="label_basic_room">Basic Room</string>
    <string name="label_standard_room">Standard Room</string>
    <string name="label_premium_room">Premium Room</string>
    <string name="label_1_month">1 month</string>
    <string name="label_3_month">3 month</string>
    <string name="label_6_month">6 month</string>
    <string name="label_12_month">12 month</string>
    <string name="error_please_select_subscription_plan">Please select subscription plan</string>
    <string name="in_app_one_month_purchase_id">one.month.room.consumable</string>
    <string name="in_app_three_month_purchase_id">three.month.room.consumable</string>
    <string name="in_app_six_month_purchase_id">six.month.room.consumable</string>
    <string name="in_app_twelve_month_purchase_id">twelve.month.room.consumable</string>
    <string name="label_close">Close</string>
    <string name="error_please_select_time">Please select time</string>
    <string name="label_capture_using_camera">Capture using camera</string>
    <string name="label_select_from_gallery">Select from Gallery</string>
    <string name="label_active">Active</string>
    <string name="label_in_active">InActive</string>
    <string name="label_update_subscription">Update Plan for %s</string>
    <string name="_50_participate">%s Participate</string>
    <string name="admin">Admin</string>
    <string name="label_video_call">Video call</string>
    <string name="label_on_going_call">on going call...</string>
    <string name="unable_to_access_group">Unable to access group as it is expired from admin side</string>
    <string name="label_no_posts_yet">No Posts Yet!</string>
    <string name="label_use_this_hashtag">Use this hashtag</string>
    <string name="label_update_your_profile">“Update your Profile info, sign up or log in to edit Personal details.”</string>
    <string name="label_rejected">Rejected</string>
    <string name="label_accepted">Accepted</string>
    <string name="label_username">Username</string>
    <string name="label_delete">Delete</string>
    <string name="label_please_try_after_some_time">Please Try after some time</string>
    <string name="label_chatroom_name">ChatRoom Name</string>
    <string name="label_chatroom_description">ChatRoom Description</string>
    <string name="label_join_room">Join Room</string>
    <string name="label_my_room">My Room</string>
    <string name="_00_00">00:00</string>
    <string name="label_delete_room">Delete Room</string>
    <string name="label_explore">Explore</string>
    <string name="label_create_room_to_connect_with_people">Create room to connect with people.</string>
    <string name="label_join_room_to_connect_with_people">Join room to connect with people.</string>
    <string name="label_message_people_to_connect_with_them">Message people to connect with them.</string>
    <string name="error_special_characters_are_not_allowed">Special characters are not allowed</string>
    <string name="restrict">Restrict Writing</string>
    <string name="you_are_restricted_to_writing_in_this_conversation">You are restricted to writing in \nthis conversation</string>
    <string name="label_you_received_new_mic_access_request">You received new mic access request</string>
    <string name="label_mic_access_request">Mic access request</string>
    <string name="desc_want_mic_access">Hello! Admin I want mic access for</string>
    <string name="toast_sent_mic_access">Your Mic Access request has been sent to admin.</string>
    <string name="toast_mic_access_request_accepted">Your Mic has been started. Now You can speak on this call too.</string>
    <string name="toast_mic_access_is_revoke">The mic permission has been removed from you by admin.</string>
    <string name="label_chat_user_info">Chat User Info</string>
    <string name="label_mic_access_user_list">Mic Access User List</string>
    <string name="label_users_not_found">Users not found...!</string>
    <string name="label_why_are_you_reporting_this_user">Why are you reporting this user?</string>
    <string name="users">Users</string>
    <string name="hashtags">Hashtags</string>
    <string name="post">Post</string>
    <string name="shorts">Shorts</string>
    <string name="challenges">Challenges</string>
    <string name="label_send">Send</string>
    <string name="label_country">Country</string>
    <string name="all">All</string>
    <string name="my_challenge">My Challenge</string>
    <string name="live">Live</string>
    <string name="completed">Completed</string>
    <string name="label_email">Email</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_enter_email">Enter email</string>
    <string name="label_add_music">Add Music</string>
    <string name="search_music">Search music</string>
    <string name="no_music">No Music</string>
    <string name="label_search_hashtag">Search Hashtags</string>
    <string name="music_trending">Trending</string>
    <string name="music_bollywood">Bollywood</string>
    <string name="music_hollywood">Hollywood</string>
    <string name="music_90s">90s</string>
    <string name="music_2000s">2000s</string>
    <string name="music_love_songs">Love songs</string>
    <string name="music_punjabi">Punjabi</string>
    <string name="music_indian_classical">Indian Classical</string>
    <string name="music_hip_hop">Hip Hop</string>
    <string name="music_lo_fi">Lo-fi</string>
    <string name="label_25_july">25 July</string>
    <string name="label_forward_slash_25">/25</string>
    <string name="label_25">25</string>
    <string name="label_day_1">Day 1</string>
</resources>