<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dayMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_25_july"
        android:textColor="@color/color_505050"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_25"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/scoreTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_forward_slash_25"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/date_bg"
        android:gravity="center_horizontal"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingEnd="6dp"
        android:paddingBottom="2dp"
        android:text="@string/label_day_1"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>