<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_20sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dismissBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_new" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_semi_bold"
            android:gravity="center"
            android:text="@string/label_forgot_password"
            android:textColor="@color/smoky_black"
            android:textSize="@dimen/_18ssp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lexend_regular"
        android:text="@string/label_email"
        android:textColor="@color/smoky_black"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_edit_text"
            android:fontFamily="@font/lexend_regular"
            android:hint="@string/label_enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/color_DDDDE3"
            android:textColorHint="@color/color_A6A6B0"
            android:textSize="@dimen/_12ssp"
            app:errorEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_date_filter_bg"
        android:backgroundTint="@color/color_tab_purple"
        android:fontFamily="@font/lexend_medium"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/label_send"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>